--- a/test/playground/index.html
+++ b/test/playground/index.html
@@ -7,44 +7,5 @@
     <title>Document</title>
     <link rel="stylesheet" href="result.css" />
   </head>
-  <body>
-    <div class="grid layout-full">
-      <div class="layout-module">
-        <div class="element"></div>
-      </div>
-      <div class="layout-module">
-        <div class="element"></div>
-      </div>
-      <div class="layout-module">
-        <div class="element"></div>
-      </div>
-      <div class="layout-module">
-        <div class="element"></div>
-      </div>
-      <div class="layout-module">
-        <div class="element"></div>
-      </div>
-      <div class="layout-module">
-        <div class="element"></div>
-      </div>
-      <div class="layout-module">
-        <div class="element"></div>
-      </div>
-      <div class="layout-module">
-        <div class="element"></div>
-      </div>
-      <div class="layout-module">
-        <div class="element"></div>
-      </div>
-      <div class="layout-module">
-        <div class="element"></div>
-      </div>
-      <div class="layout-module">
-        <div class="element"></div>
-      </div>
-      <div class="layout-module">
-        <div class="element"></div>
-      </div>
-    </div>
-  </body>
+  <body></body>
 </html>
