--- a/test/playground/index.html
+++ b/test/playground/index.html
@@ -5,7 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="../../dist/style.min.css" />
     <link rel="stylesheet" href="result.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="grid layout-full">
+      <div class="layout-module">
+        <span>clr-txt-personality</span>
+        <div class="color-block" style="background-color: var(--clr-txt-personality)"></div>
+      </div>
+      <div class="layout-module">
+        <span>clr-bg-panel</span>
+        <div class="color-block" style="background-color: var(--clr-bg-panel)"></div>
+      </div>
+      <div class="layout-module">
+        <span>clr-txt-base | clr-border</span>
+        <div class="color-block" style="background-color: var(--clr-txt-base)"></div>
+      </div>
+      <div class="layout-module">
+        <span>clr-txt-error</span>
+        <div class="color-block" style="background-color: var(--clr-txt-error)"></div>
+      </div>
+      <div class="layout-module">
+        <span>clr-bg-input</span>
+        <div class="color-block" style="background-color: var(--clr-bg-input)"></div>
+      </div>
+      <div class="layout-module">
+        <span>clr-bg-disabled</span>
+        <div class="color-block" style="background-color: var(--clr-bg-disabled)"></div>
+      </div>
+      <div class="layout-module">
+        <span>clr-bg-error</span>
+        <div class="color-block" style="background-color: var(--clr-bg-error)"></div>
+      </div>
+    </div>
+  </body>
 </html>
