--- a/test/playground/index.html
+++ b/test/playground/index.html
@@ -9,35 +9,35 @@
     <link rel="stylesheet" href="result.css" />
   </head>
   <body>
-    <div class="grid layout-full">
-      <div class="layout-module">
+    <section>
+      <article>
         <span>clr-txt-personality</span>
         <div class="color-block" style="background-color: var(--clr-txt-personality)"></div>
-      </div>
-      <div class="layout-module">
+      </article>
+      <article>
         <span>clr-bg-panel</span>
         <div class="color-block" style="background-color: var(--clr-bg-panel)"></div>
-      </div>
-      <div class="layout-module">
+      </article>
+      <article>
         <span>clr-txt-base | clr-border</span>
         <div class="color-block" style="background-color: var(--clr-txt-base)"></div>
-      </div>
-      <div class="layout-module">
+      </article>
+      <article>
         <span>clr-txt-error</span>
         <div class="color-block" style="background-color: var(--clr-txt-error)"></div>
-      </div>
-      <div class="layout-module">
+      </article>
+      <article>
         <span>clr-bg-input</span>
         <div class="color-block" style="background-color: var(--clr-bg-input)"></div>
-      </div>
-      <div class="layout-module">
+      </article>
+      <article>
         <span>clr-bg-disabled</span>
         <div class="color-block" style="background-color: var(--clr-bg-disabled)"></div>
-      </div>
-      <div class="layout-module">
+      </article>
+      <article>
         <span>clr-bg-error</span>
         <div class="color-block" style="background-color: var(--clr-bg-error)"></div>
-      </div>
-    </div>
+      </article>
+    </section>
   </body>
 </html>
