--- a/test/playground/index.html
+++ b/test/playground/index.html
@@ -9,35 +9,83 @@
     <link rel="stylesheet" href="result.css" />
   </head>
   <body>
-    <section>
-      <article>
-        <span>clr-txt-personality</span>
-        <div class="color-block" style="background-color: var(--clr-txt-personality)"></div>
-      </article>
-      <article>
-        <span>clr-bg-panel</span>
-        <div class="color-block" style="background-color: var(--clr-bg-panel)"></div>
-      </article>
-      <article>
-        <span>clr-txt-base | clr-border</span>
-        <div class="color-block" style="background-color: var(--clr-txt-base)"></div>
-      </article>
-      <article>
-        <span>clr-txt-error</span>
-        <div class="color-block" style="background-color: var(--clr-txt-error)"></div>
-      </article>
-      <article>
-        <span>clr-bg-input</span>
-        <div class="color-block" style="background-color: var(--clr-bg-input)"></div>
-      </article>
-      <article>
-        <span>clr-bg-disabled</span>
-        <div class="color-block" style="background-color: var(--clr-bg-disabled)"></div>
-      </article>
-      <article>
-        <span>clr-bg-error</span>
-        <div class="color-block" style="background-color: var(--clr-bg-error)"></div>
-      </article>
-    </section>
+    <main>
+      <header>
+        <section>
+          <article>
+            <h1>This is the GarliCSS 🧄 playground</h1>
+            <p>
+              Hello <code>( ´ ω ` )ノﾞ</code> thanks a lot for being interested in this project. This is
+              the playground, this site is designed to be a live test of this library on the default
+              settings. Here, things like themes, grid systems, media queries, and every other feature
+              offered must be available for testing as if we were in a closed lab. This simulation is
+              meant to start with the bare minimum required to make a functional, usable, accessible, and
+              aesthetic website. But it must be extendible to test anything it can offer.
+            </p>
+          </article>
+          <article>
+            <a href="#">This link will take you nowhere.</a>
+          </article>
+        </section>
+      </header>
+      <section>
+        <article>
+          <div>
+            <h2>Alice’s Adventures in Wonderland</h2>
+            <p>by Lewis Carroll</p>
+            <p>THE MILLENNIUM FULCRUM EDITION 3.0</p>
+            <h3>CHAPTER I. Down the Rabbit-Hole</h3>
+            <p>
+              Alice was beginning to get very tired of sitting by her sister on the bank, and of having
+              nothing to do: once or twice she had peeped into the book her sister was reading, but it had
+              no pictures or conversations in it, “and what is the use of a book,” thought Alice “without
+              pictures or conversations?”
+            </p>
+            <p>
+              So she was considering in her own mind (as well as she could, for the hot day made her feel
+              very sleepy and stupid), whether the pleasure of making a daisy-chain would be worth the
+              trouble of getting up and picking the daisies, when suddenly a White Rabbit with pink eyes
+              ran close by her.
+            </p>
+            <h4>Heading 4</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam unde cum, atque sunt
+              dignissimos sit! Soluta, eligendi nulla consectetur, delectus repellat nesciunt eius ducimus
+              quo natus adipisci similique cum molestias?
+            </p>
+            <h4>Heading 5</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam unde cum, atque sunt
+              dignissimos sit! Soluta, eligendi nulla consectetur, delectus repellat nesciunt eius ducimus
+              quo natus adipisci similique cum molestias?
+            </p>
+            <h4>Heading 6</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam unde cum, atque sunt
+              dignissimos sit! Soluta, eligendi nulla consectetur, delectus repellat nesciunt eius ducimus
+              quo natus adipisci similique cum molestias?
+            </p>
+          </div>
+        </article>
+        <article>
+          <form>
+            <label>
+              <p>Birthday</p>
+              <input type="date" />
+            </label>
+            <p class="txt-error">Required fields</p>
+            <label>
+              <p>Username</p>
+              <input required type="text" placeholder="foobar" />
+            </label>
+            <label>
+              <p>Password</p>
+              <input required type="password" />
+            </label>
+            <input type="submit" value="sign in" />
+          </form>
+        </article>
+      </section>
+    </main>
   </body>
 </html>
