--- a/test/playground/index.html
+++ b/test/playground/index.html
@@ -83,6 +83,7 @@
               <input required type="password" />
             </label>
             <input type="submit" value="sign in" />
+            <button class="bg-disabled">Disabled</button>
           </form>
         </article>
       </section>
