--- a/test/playground/index.html
+++ b/test/playground/index.html
@@ -13,7 +13,6 @@
       <header>
         <section>
           <article>
-            <h1>This is the GarliCSS 🧄 playground</h1>
             <p>
               Hello <code>( ´ ω ` )ノﾞ</code> thanks a lot for being interested in this project. This is
               the playground, this site is designed to be a live test of this library on the default
@@ -31,21 +30,33 @@
       <section>
         <article>
           <div>
-            <h2>Alice’s Adventures in Wonderland</h2>
-            <p>by Lewis Carroll</p>
-            <p>THE MILLENNIUM FULCRUM EDITION 3.0</p>
-            <h3>CHAPTER I. Down the Rabbit-Hole</h3>
+            <h1>Heading 1</h1>
             <p>
-              Alice was beginning to get very tired of sitting by her sister on the bank, and of having
-              nothing to do: once or twice she had peeped into the book her sister was reading, but it had
-              no pictures or conversations in it, “and what is the use of a book,” thought Alice “without
-              pictures or conversations?”
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam unde cum, atque sunt
+              dignissimos sit! Soluta, eligendi nulla consectetur, delectus repellat nesciunt eius ducimus
+              quo natus adipisci similique cum molestias?
             </p>
             <p>
-              So she was considering in her own mind (as well as she could, for the hot day made her feel
-              very sleepy and stupid), whether the pleasure of making a daisy-chain would be worth the
-              trouble of getting up and picking the daisies, when suddenly a White Rabbit with pink eyes
-              ran close by her.
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam unde cum, atque sunt
+              dignissimos sit! Soluta, eligendi nulla consectetur, delectus repellat nesciunt eius ducimus
+              quo natus adipisci similique cum molestias?
+            </p>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam unde cum, atque sunt
+              dignissimos sit! Soluta, eligendi nulla consectetur, delectus repellat nesciunt eius ducimus
+              quo natus adipisci similique cum molestias?
+            </p>
+            <h2>Heading 2</h2>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam unde cum, atque sunt
+              dignissimos sit! Soluta, eligendi nulla consectetur, delectus repellat nesciunt eius ducimus
+              quo natus adipisci similique cum molestias?
+            </p>
+            <h3>Heading 3</h3>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam unde cum, atque sunt
+              dignissimos sit! Soluta, eligendi nulla consectetur, delectus repellat nesciunt eius ducimus
+              quo natus adipisci similique cum molestias?
             </p>
             <h4>Heading 4</h4>
             <p>
@@ -53,13 +64,13 @@
               dignissimos sit! Soluta, eligendi nulla consectetur, delectus repellat nesciunt eius ducimus
               quo natus adipisci similique cum molestias?
             </p>
-            <h4>Heading 5</h4>
+            <h5>Heading 5</h5>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam unde cum, atque sunt
               dignissimos sit! Soluta, eligendi nulla consectetur, delectus repellat nesciunt eius ducimus
               quo natus adipisci similique cum molestias?
             </p>
-            <h4>Heading 6</h4>
+            <h6>Heading 6</h6>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam unde cum, atque sunt
               dignissimos sit! Soluta, eligendi nulla consectetur, delectus repellat nesciunt eius ducimus
@@ -70,20 +81,20 @@
         <article>
           <form>
             <label>
-              <p>Birthday</p>
+              Birthday
               <input type="date" />
             </label>
-            <p class="txt-error">Required fields</p>
             <label>
-              <p>Username</p>
+              Username
               <input required type="text" placeholder="foobar" />
             </label>
             <label>
-              <p>Password</p>
+              Password
               <input required type="password" />
             </label>
             <input type="submit" value="sign in" />
             <button class="bg-disabled">Disabled</button>
+            <span class="txt-error">Required fields</span>
           </form>
         </article>
       </section>
