--- a/test/playground/index.html
+++ b/test/playground/index.html
@@ -81,20 +81,80 @@
         <article>
           <form>
             <label>
-              Birthday
+              type="date"
               <input type="date" />
             </label>
             <label>
-              Username
-              <input required type="text" placeholder="foobar" />
+              type="datetype-local"
+              <input type="datetype-local" />
             </label>
             <label>
-              Password
-              <input required type="password" />
+              type="month"
+              <input type="month" />
             </label>
-            <input type="submit" value="sign in" />
-            <button class="bg-disabled">Disabled</button>
+            <label>
+              type="week"
+              <input type="week" />
+            </label>
+            <label>
+              type="time"
+              <input type="time" />
+            </label>
+            <label>
+              type="tel"
+              <input type="tel" />
+            </label>
+            <label>
+              type="number"
+              <input type="number" />
+            </label>
+            <label>
+              type="email"
+              <input type="email" />
+            </label>
+            <label>
+              type="password"
+              <input type="password" />
+            </label>
+            <label>
+              type="search"
+              <input type="search" />
+            </label>
+            <label>
+              type="url"
+              <input type="url" />
+            </label>
+            <label>
+              type="text"
+              <input type="text" />
+            </label>
+            <label>
+              type="file"
+              <input type="file" />
+            </label>
+            <label>
+              type="color"
+              <input type="color" />
+            </label>
+            <label>
+              type="range"
+              <input type="range" />
+            </label>
+
+            <label>
+              required
+              <input type="text" required />
+            </label>
+
+            <label>
+              disabled
+              <input type="text" disabled />
+            </label>
+
+            <input type="submit" value="submit" />
+
             <span class="txt-error">Required fields</span>
+            <button class="bg-disabled">Disabled</button>
           </form>
         </article>
       </section>
