--- a/test/playground/index.html
+++ b/test/playground/index.html
@@ -154,7 +154,7 @@
             <input type="submit" value="submit" />
 
             <span class="txt-error">Required fields</span>
-            <button class="bg-disabled">Disabled</button>
+            <button disabled>Disabled</button>
           </form>
         </article>
       </section>
