--- a/test/playground/index.html
+++ b/test/playground/index.html
@@ -29,56 +29,6 @@
       </header>
       <section>
         <article>
-          <div>
-            <h1>Heading 1</h1>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam unde cum, atque sunt
-              dignissimos sit! Soluta, eligendi nulla consectetur, delectus repellat nesciunt eius ducimus
-              quo natus adipisci similique cum molestias?
-            </p>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam unde cum, atque sunt
-              dignissimos sit! Soluta, eligendi nulla consectetur, delectus repellat nesciunt eius ducimus
-              quo natus adipisci similique cum molestias?
-            </p>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam unde cum, atque sunt
-              dignissimos sit! Soluta, eligendi nulla consectetur, delectus repellat nesciunt eius ducimus
-              quo natus adipisci similique cum molestias?
-            </p>
-            <h2>Heading 2</h2>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam unde cum, atque sunt
-              dignissimos sit! Soluta, eligendi nulla consectetur, delectus repellat nesciunt eius ducimus
-              quo natus adipisci similique cum molestias?
-            </p>
-            <h3>Heading 3</h3>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam unde cum, atque sunt
-              dignissimos sit! Soluta, eligendi nulla consectetur, delectus repellat nesciunt eius ducimus
-              quo natus adipisci similique cum molestias?
-            </p>
-            <h4>Heading 4</h4>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam unde cum, atque sunt
-              dignissimos sit! Soluta, eligendi nulla consectetur, delectus repellat nesciunt eius ducimus
-              quo natus adipisci similique cum molestias?
-            </p>
-            <h5>Heading 5</h5>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam unde cum, atque sunt
-              dignissimos sit! Soluta, eligendi nulla consectetur, delectus repellat nesciunt eius ducimus
-              quo natus adipisci similique cum molestias?
-            </p>
-            <h6>Heading 6</h6>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam unde cum, atque sunt
-              dignissimos sit! Soluta, eligendi nulla consectetur, delectus repellat nesciunt eius ducimus
-              quo natus adipisci similique cum molestias?
-            </p>
-          </div>
-        </article>
-        <article>
           <form>
             <label>
               type="date"
@@ -150,12 +100,16 @@
               disabled
               <input type="text" disabled />
             </label>
-
-            <input type="submit" value="submit" />
-
-            <span class="txt-error">Required fields</span>
-            <button disabled>Disabled</button>
           </form>
+        </article>
+        <article>
+          <p>Input type submit</p>
+          <input type="button" value="submit" />
+          <input type="button" value="disabled submit" disabled />
+          <p>Button element</p>
+          <button>button</button>
+          <button disabled>disabled button</button>
+          <p class="txt-error">Error message example.</p>
         </article>
       </section>
     </main>
