--- a/test/playground/index.html
+++ b/test/playground/index.html
@@ -31,6 +31,20 @@
         <article>
           <form>
             <label>
+              select
+              <select>
+                <option value="" disabled selected>Select your option</option>
+                <option value="1">Option 1</option>
+                <option value="1">Option 1</option>
+                <option value="2">Option 2</option>
+                <option value="3">Option 3</option>
+              </select>
+            </label>
+            <label>
+              <span>textarea</span>
+              <textarea></textarea>
+            </label>
+            <label>
               type="date"
               <input type="date" />
             </label>
