--- a/test/playground/index.html
+++ b/test/playground/index.html
@@ -27,11 +27,12 @@
           </article>
         </section>
       </header>
+      <div class="gradient-test"></div>
       <section>
         <article>
           <form>
             <label>
-              select
+              <span>select</span>
               <select>
                 <option value="" disabled selected>Select your option</option>
                 <option value="1">Option 1</option>
@@ -45,73 +46,73 @@
               <textarea></textarea>
             </label>
             <label>
-              type="date"
+              <span>type="date"</span>
               <input type="date" />
             </label>
             <label>
-              type="datetype-local"
+              <span>type="datetype-local"</span>
               <input type="datetype-local" />
             </label>
             <label>
-              type="month"
+              <span>type="month"</span>
               <input type="month" />
             </label>
             <label>
-              type="week"
+              <span>type="week"</span>
               <input type="week" />
             </label>
             <label>
-              type="time"
+              <span>type="time"</span>
               <input type="time" />
             </label>
             <label>
-              type="tel"
+              <span>type="tel"</span>
               <input type="tel" />
             </label>
             <label>
-              type="number"
+              <span>type="number"</span>
               <input type="number" />
             </label>
             <label>
-              type="email"
+              <span>type="email"</span>
               <input type="email" />
             </label>
             <label>
-              type="password"
+              <span>type="password"</span>
               <input type="password" />
             </label>
             <label>
-              type="search"
+              <span>type="search"</span>
               <input type="search" />
             </label>
             <label>
-              type="url"
+              <span>type="url"</span>
               <input type="url" />
             </label>
             <label>
-              type="text"
+              <span>type="text"</span>
               <input type="text" />
             </label>
             <label>
-              type="file"
+              <span>type="file"</span>
               <input type="file" />
             </label>
             <label>
-              type="color"
+              <span>type="color"</span>
               <input type="color" />
             </label>
             <label>
-              type="range"
+              <span>type="range"</span>
               <input type="range" />
             </label>
 
             <label>
-              required
+              <span>required</span>
               <input type="text" required />
             </label>
 
             <label>
-              disabled
+              <span>disabled</span>
               <input type="text" disabled />
             </label>
           </form>
